# FHE_PCA

./: CMakeLists.txt  README.md  REPORT.md  build.sh  execute_command.md
data/: generate_sample.py
src/: he_context.cpp  he_context.h  he_linalg.cpp  he_linalg.h  main.cpp  packing.cpp  packing.h  pca.cpp  pca.h  power_iteration.cpp  power_iteration.h  utils.cpp  utils.h
tests/: test_he_linalg.cpp  test_packing.cpp  test_pca.cpp
